<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/ivPhotos"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="Photo"
        android:src="@mipmap/main_activity_header_mars_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPhotoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/photo_id"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_below="@id/tvPhotoId"
            android:id="@+id/tvPhotoSol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/martin_sol"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvEarthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPhotoSol"
            android:layout_margin="10dp"
            android:text="@string/earth_date"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/tvCameraName"
            android:layout_below="@id/tvEarthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/camera"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>
</LinearLayout>