<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goToCuriosity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragment.BottomSheet">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="Rover Detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black"
                android:textStyle="italic|bold" />

            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="220dp"
                android:layout_marginLeft="220dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/black"
                app:srcCompat="@drawable/ic_cancel" />

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/roverImage"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/curiosity" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvRoverName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rover_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvLaunchDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/launch_date"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLandingDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/landing_date"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMaxSol"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/max_sol"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMaxDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/max_earth_date"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalPhotos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/total_photos"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/Bottom_Sheet_progressBar"
        android:layout_width="84dp"
        android:layout_height="96dp"
        android:layout_gravity="center" />

</LinearLayout>

